--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               >
             </li>
             <li>
-              <a href="#eventos" class="nav__link">Eventos</a>
+              <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
               <a href="#conviértete_en_miembro" class="nav__link"
@@ -119,7 +119,7 @@
             </li>
           </ul>
         </section>
-        <section class="events" id="eventos">
+        <section class="events" id="events">
           <div class="events__content">
             <h2 class="events__heading">Próximos eventos:</h2>
             <h3 class="events__title">
