--- a/index.html
+++ b/index.html
@@ -259,53 +259,51 @@
             </li>
           </ul>
         </section>
-        <footer class="footer" id="footer">
-          <div class="footer__columns">
-            <div class="footer__column">
-              <img
-                src="./images/logo_white.svg"
-                alt="Logotipo de la biblioteca Triple Blanco"
-                class="footer__logo"
-              />
-            </div>
-            <div class="footer__column footer__column_content_hours">
-              <h2 class="footer__column-heading">Horario de apertura</h2>
-              <ul class="footer__list">
-                <li class="footer__list-item">
-                  Lunes a viernes: 9 a.m. - 8 p.m
-                </li>
-                <li class="footer__list-item">
-                  Sábados y domingos: 10 a.m - 6 p.m
-                </li>
-              </ul>
-            </div>
-            <div class="footer__column footer__column_content_social">
-              <h2 class="footer__column-heading">Redes Sociales</h2>
-              <ul class="footer__list">
-                <li class="footer__list-item">
-                  <img
-                    src="./images/facebook_white.svg"
-                    alt="Logotipo Facebook Blanco"
-                    class="footer__social-icon"
-                  />
-                  <a href="#" class="footer__column-link">Facebook</a>
-                </li>
-                <li class="footer__list-item">
-                  <img
-                    src="./images/instagram_white.svg"
-                    alt="Logotipo Instagram Blanco"
-                    class="footer__social-icon"
-                  />
-                  <a href="#" class="footer__column-link">Instagram</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer__copyright">
-            <h3>&copy; 2024 Ciro Ernesto Rivera Mariño</h3>
-          </div>
-        </footer>
       </main>
+      <footer class="footer" id="footer">
+        <div class="footer__columns">
+          <div class="footer__column">
+            <img
+              src="./images/logo_white.svg"
+              alt="Logotipo de la biblioteca Triple Blanco"
+              class="footer__logo"
+            />
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h2 class="footer__column-heading">Horario de apertura</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">Lunes a viernes: 9 a.m. - 8 p.m</li>
+              <li class="footer__list-item">
+                Sábados y domingos: 10 a.m - 6 p.m
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h2 class="footer__column-heading">Redes Sociales</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="Logotipo Facebook Blanco"
+                  class="footer__social-icon"
+                />
+                <a href="#" class="footer__column-link">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="Logotipo Instagram Blanco"
+                  class="footer__social-icon"
+                />
+                <a href="#" class="footer__column-link">Instagram</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <h3>&copy; 2024 Ciro Ernesto Rivera Mariño</h3>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
