--- a/index.html
+++ b/index.html
@@ -282,20 +282,24 @@
             <h2 class="footer__column-heading">Redes Sociales</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <img
-                  src="./images/facebook_white.svg"
-                  alt="Logotipo Facebook Blanco"
-                  class="footer__social-icon"
-                />
-                <a href="#" class="footer__column-link">Facebook</a>
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Logotipo Facebook Blanco"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
               </li>
               <li class="footer__list-item">
-                <img
-                  src="./images/instagram_white.svg"
-                  alt="Logotipo Instagram Blanco"
-                  class="footer__social-icon"
-                />
-                <a href="#" class="footer__column-link">Instagram</a>
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Logotipo Instagram Blanco"
+                    class="footer__social-icon"
+                  />
+                  Instagram</a
+                >
               </li>
             </ul>
           </div>
