--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <h3>&copy; 2024 Ciro Ernesto Rivera Mariño</h3>
+          <p>&copy; 2024 Ciro Ernesto Rivera Mariño</p>
         </div>
       </footer>
     </div>
