3er sprint, 3er stage, 5to envio

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <p>&copy; 2024 Ciro Ernesto Rivera Mariño</p>
+          <p>© 2024 Ciro Ernesto Rivera Mariño</p>
         </div>
       </footer>
     </div>
