--- a/index.html
+++ b/index.html
@@ -304,9 +304,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer__copyright">
-          <p>© 2024 Ciro Ernesto Rivera Mariño</p>
-        </div>
+        <p class="footer__copyright">© 2024 Ciro Ernesto Rivera Mariño</p>
       </footer>
     </div>
   </body>
